# fitness-ai-chatbot

./: .gitignore  Postman_Instructions.md  README.md  config.py  del_db.py  load_env_var.py  logging_config.py  pyproject.toml  reinitialize_db_script.py  run.py
app/: README.md  __init__.py  actions.py  db_session.py  graph.py  impact_goal_models.py  logging_config.py  prompts.py  user_validate.py
app/agent_states/: availability.py  equipment.py  macrocycles.py  main_agent_state.py  mesocycles.py  microcycles.py  phase_components.py  workout_completion.py  workout_schedule.py
app/agents/: agent_helpers.py  availability.py  base_agent.py  constraints.py  cp_ortools.py  cp_pulp.py  exercise_model_specific_constraints.py  exercises.py  exercises_phase_components.py  goals.py  phase_components.py  phases.py  weekday_availability.py  workout_availability.py
app/altering_agents/: README.md
app/auth/: README.md  routes.py
app/common_table_queries/: availability.py  exercises.py  macrocycles.py  mesocycles.py  microcycles.py  phase_components.py
app/construct_lists_from_sql/: exercises.py  phases.py
app/core/: base_solver.py  goal_prompt_generator.py
app/creation_agents/: README.md
app/current_user/: routes.py
app/database_to_frontend/: base.py  user_equipment.py  user_macrocycles.py  user_mesocycles.py  user_microcycles.py  user_weekday_availability.py  user_workout_days.py  user_workout_exercises.py
app/models/: README.md  (+62 more)
verbosity_config/: __init__.py  base.py  loud.py  main_agent.py  main_sub_agent.py  quiet.py  scheduler.py  scheduler_pre_processing.py
(+499 files in other folders)
